--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ li:last-child {
 }
 
 form {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-content: left;
     height:110px;
     width:190px;
     margin:auto;
